--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=jenpeupu
+spring.application.name=SpringBootSecurityPostGreSQLApplication
 
 spring.datasource.url = jdbc:postgresql://localhost:5432/testv1
 spring.datasource.username=postgres
@@ -6,3 +6,9 @@ spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+server.port=8090
+
+# App Properties
+bezkoder.app.jwtSecret= ======================BezKoder=Spring===========================
+bezkoder.app.jwtExpirationMs=86400000
